# VideoQualityMonitor

./: CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.h  icon.icns  main.cpp
